<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="@drawable/pop_bg"
    android:paddingTop="@dimen/string10dp"
    android:layout_marginBottom="@dimen/string10dp">

    <LinearLayout
        android:id="@+id/layout_single"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:padding="5dp">

        <ImageView
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_marginLeft="7dp"
            android:scaleType="fitCenter"
            android:src="@mipmap/single" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:text="@string/music_single"
            android:textColor="@color/c_3D3C3C"
            android:textSize="16sp"
            android:typeface="sans"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout_order"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:padding="5dp">

        <ImageView
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_marginLeft="5dp"
            android:scaleType="fitCenter"
            android:src="@mipmap/order" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:text="@string/music_order"
            android:textColor="@color/c_3D3C3C"
            android:textSize="16sp"
            android:typeface="sans"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout_mv"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:padding="5dp">

        <ImageView
            android:layout_width="23dp"
            android:layout_height="23dp"
            android:layout_marginLeft="5dp"
            android:scaleType="fitCenter"
            android:src="@mipmap/pop_mv" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="7dp"
            android:text="@string/music_mv"
            android:textColor="@color/c_3D3C3C"
            android:textSize="16sp"
            android:typeface="sans"/>
    </LinearLayout>


</LinearLayout>