<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="@drawable/pop_bg"
    android:paddingTop="@dimen/string10dp"
    android:layout_marginBottom="@dimen/string10dp">

    <LinearLayout
        android:id="@+id/pop_layout_timer"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:padding="5dp">

        <ImageView
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_marginLeft="7dp"
            android:scaleType="fitCenter"
            android:src="@mipmap/pop_set" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:text="@string/music_timer_set"
            android:textColor="@color/c_3D3C3C"
            android:textSize="16sp"
            android:typeface="sans"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/pop_layout_close"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:padding="5dp">

        <ImageView
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_marginLeft="5dp"
            android:scaleType="fitCenter"
            android:src="@mipmap/timer" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:text="@string/music_timer"
            android:textColor="@color/c_3D3C3C"
            android:textSize="16sp"
            android:typeface="sans"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/music_layout_car"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:padding="5dp">

        <ImageView
            android:layout_width="22dp"
            android:layout_height="22dp"
            android:layout_marginLeft="5dp"
            android:scaleType="fitCenter"
            android:src="@mipmap/pop_car" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:text="@string/music_timer_songs"
            android:textColor="@color/c_3D3C3C"
            android:textSize="16sp"
            android:typeface="sans"/>
    </LinearLayout>


</LinearLayout>